Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22370

Wrong behaviour of function QItemSelectionModel::rowIntersectsSelection(int row, const QModelIndex &parent)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 4.7.4
    • Widgets: Itemviews
    • None
    • c1df856d6b7fbbf3f21e294cdb481aeaec8110e4

    Description

      This method returns true for each row with the same row number as a selected item regardless of the parent.

      According to documentation it returns true if there are any items selected in the row with the given parent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stephen.kelly Stephen Kelly (Unused account) (Inactive)
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes